updated EditProfile and adjusted spacing in all forms
making fonts variables

cleaned up typography across the site

fixing tags on sidebar

removed fields we no longer need from user profile

--- a/src/About.scss
+++ b/src/About.scss
@@ -4,22 +4,26 @@
   padding-top: 3%;
   h1 {
     color: $primary-color;
-    font-weight: 500;
+    font-weight: $medium-weight;
     line-height: 72px;
   }
 
   h2 {
     color: $primary-color;
-    font-weight: 500;
-    line-height: 44px;
+    font-weight: $medium-weight;
+    line-height: 40px;
     margin-top: 24px;
     margin-bottom: 24px;
   }
 
   @include media-breakpoint-down(sm) { 
-    h1, h2 {
+    h2, h3 {
       line-height: 1;
     }
+  }
+
+  iframe {
+    margin-left: -60px;
   }
 
   .person {
@@ -39,7 +43,7 @@
 
     a {
       color: $primary-color;
-      font-weight: 600;
+      font-weight: $medium-weight;
       text-decoration:underline;
       &:hover, &:focus {
         color:$interactive-color;
@@ -63,7 +67,7 @@
     .name {
       color: $black;
       line-height: 24px;
-      font-weight: 500;
+      font-weight: $medium-weight;
     }
 
     .sub-content {
@@ -90,7 +94,7 @@ img.article-image {
     padding-top: 24px;
     .title {
       color: $primary-color;
-      font-weight: 500;
+      font-weight: $medium-weight;
       padding: 24px 16px;
       font-size: 28px;
       &:hover, &:focus {
