--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -89,7 +89,7 @@
             padding-top: 18px;
 
             p {
-              font-weight: 500;
+              font-weight: $medium-weight;
 
               &:last-child {
                 color: $blue;
