--- a/src/components/SearchQueryField/SearchQueryField.scss
+++ b/src/components/SearchQueryField/SearchQueryField.scss
@@ -9,7 +9,7 @@
   margin: 12px 0;
   height: 40px;
   color: #fff;
-  font-weight: 100;
+  font-weight: $normal-weight;
   padding-left: 36px;
 
   background-image: url(/img/pp-search-icon.png);
