--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -146,7 +146,7 @@
       float: left;
       padding: 1rem 0;
       font-size: 1.4rem;
-      font-weight: bold;
+      font-weight: $medium-weight;
       color: white;
       &:hover {
         text-decoration: none;
@@ -167,7 +167,7 @@
       padding:0;
       position:relative;
       margin-top:0;
-      width:40%;
+      width:45%;
       background-color:transparent;
     }
   }
