--- a/src/StaticPages.scss
+++ b/src/StaticPages.scss
@@ -1,9 +1,16 @@
+@import "./UniversalStyles";
+
 .static {
   a {
     text-decoration: underline;
     color: #000;
     &:hover {
       color: #000;
+    }
+  }
+  h1, h2, h3 {
+    span {
+      font-weight: $medium-weight;
     }
   }
   .accordion {
@@ -14,6 +21,6 @@
     }
   }
   .sub-head {
-    font-weight: 500;
+    font-weight: $medium-weight;
   }
 }
