--- a/src/components/GeoSuggest/GeoSuggest.scss
+++ b/src/components/GeoSuggest/GeoSuggest.scss
@@ -4,12 +4,15 @@
   padding: 0.6rem 1rem;
   border: 2px solid $black;
   @include media-breakpoint-up(lg) {
-    width: 60% !important;
+    width: 70% !important;
   }
 }
 
 .geosuggest__input-wrapper {
   width: 28%;
+  @include media-breakpoint-down(lg) {
+    width: 70%;
+  }
   input {
     border: none;
     width: 100%;
