--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -390,3 +390,10 @@ div h3.searching-message {
     }
   }
 }
+
+.addFAB {
+  z-index: 3000;
+  position: fixed;
+  right: 20px;
+  bottom: 40px;
+}
