--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -125,6 +125,9 @@
     @include media-breakpoint-up(lg){
       width:25%;
     } 
+    @include media-breakpoint-only(xs){
+      width: 207px;
+    } 
 
     .menu-icon {
       float: left;
@@ -134,6 +137,9 @@
       @include media-breakpoint-up(sm){
         margin-right:16px;
       }
+      @include media-breakpoint-only(xs){
+        padding: 16px 0 16px 11px;
+      } 
       &:hover{
         cursor:pointer;
         svg {
