--- a/src/bootstrap-custom.scss
+++ b/src/bootstrap-custom.scss
@@ -4,12 +4,12 @@
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-$h1-font-size: 2.5rem;
+// $h1-font-size: 2.5rem;
 $h2-font-size: 1.75rem;
 $h3-font-size: 1.25rem;
-$h4-font-size: 1.2rem;
-$h5-font-size: 1.1rem;
-$h6-font-size: 1rem;
+$h4-font-size: 1.125rem;
+// $h5-font-size: 1.25rem;
+// $h6-font-size: 1rem;
 
 // Core variables and mixins
 @import "../node_modules/bootstrap/scss/functions";
