--- a/src/components/PropEditors.scss
+++ b/src/components/PropEditors.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   width: 200px;
   height: 200px;
-  background-color: #ece8e6;
+  background-color: $black;
   border-radius: 100px;
   position: relative;
   overflow: hidden;
