--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -282,3 +282,13 @@
   padding: 2em;
   font-size: 2rem;
 }
+
+#feedback {
+  position: fixed;
+  height: 30px;
+  background: $black;
+  width: 120px;
+  bottom: 0;
+  left: 30px;
+  z-index: 20;
+}
