--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -12,15 +12,18 @@
   padding-bottom: 0.5em;
 }
 
-.field-case {
-  padding-bottom: 3rem;
-  padding-top: 2.6rem;
+.form-section {
   border-bottom:1px solid #ccc;
+}
+
+.field-case {
+  padding-bottom: 2rem;
+  padding-top: 1rem;
   &.top {
     padding-top: 0;
   }
   &.select {
-    padding-bottom: 2.1rem;
+    padding-bottom: 1rem;
   }
   &.related, &.media {
     padding-bottom: 1.6rem;
@@ -99,6 +102,10 @@ label {
   hr {
     display: none;
   }
+}
+
+.section-heading {
+  padding-top: 3rem;
 }
 
 .sub-heading {
