done with 2.Location, need actual values and styling

--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -22,12 +22,12 @@
   &.top {
     padding-top: 0;
   }
-  &.select {
-    padding-bottom: 1rem;
-  }
-  &.related, &.media {
-    padding-bottom: 1.6rem;
-  }
+  // &.select {
+  //   padding-bottom: 1rem;
+  // }
+  // &.related, &.media {
+  //   padding-bottom: 1.6rem;
+  // }
   &.last {
     border: none;
   }
