before implementing quick-submit

--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -47,6 +47,13 @@
   margin-top: -7px;
 }
 
+.custom-textarea {
+  border: 2px solid $black;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  min-height: 70px;
+}
+
 .custom-field {
   border: 2px solid $black;
   padding-left: 1rem;
