added all placeholders

--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -286,6 +286,7 @@
 .infobox {
   display: inline-block;
   cursor: pointer;
+  margin-top: -14px;
   svg {
     width: 16px !important;
     transform: translateY(7px);
