--- a/src/react-dropzone-s3-uploader.scss
+++ b/src/react-dropzone-s3-uploader.scss
@@ -11,13 +11,18 @@
     visibility: hidden;
   }
   &:after {
-    content: 'Upload from your device';
+    content: 'Select a photo from your device';
     color: rgba(0, 0, 0, 0.47);
     position: absolute;
     left: 0;
     top: 3px; 
     padding-left: 1rem;
     padding-top: 0.5rem;
+  }
+  &.files {
+    &:after {
+      content: 'Upload relevant documents';
+    }
   }
   @include media-breakpoint-down(sm){
     width: 255px;
