--- a/src/global.scss
+++ b/src/global.scss
@@ -1,29 +1,103 @@
 @font-face {
-  font-family:'Fakt';
-  src: url('fonts/FaktPro-Medium.ttf');
-  font-weight:600;
-  font-style:normal;
+  font-family: "Fakt";
+  src: url("fonts/FaktPro-Medium.ttf");
+  font-weight: 600;
+  font-style: normal;
 }
 @font-face {
-  font-family:'Fakt';
-  src: url('fonts/FaktPro-Normal.ttf');
-  font-weight:500;
-  font-style:normal;
+  font-family: "Fakt";
+  src: url("fonts/FaktPro-Normal.ttf");
+  font-weight: 500;
+  font-style: normal;
 }
 @font-face {
-  font-family:'Fakt';
-  src: url('fonts/FaktPro-Blond.ttf');
-  font-weight:400;
-  font-style:normal;
+  font-family: "Fakt";
+  src: url("fonts/FaktPro-Blond.ttf");
+  font-weight: 400;
+  font-style: normal;
 }
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h4, h6, p,
-blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
-ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
-dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
-figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h4,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -32,8 +106,27 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+ul.givemebackmylists {
+  list-style: initial;
+  margin: initial;
+  padding: 0 0 0 1rem;
+}
+
+.givemebackmylists li {
+  display: list-item;
+}
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
 section {
   display: block;
 }
@@ -80,5 +173,5 @@ a {
   background-position: center;
 }
 .leaflet-control-attribution {
-  display:none;
+  display: none;
 }
