--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -90,9 +90,13 @@ div[role=menu]{
 span[role=menuitem] {
   line-height: 23px !important;;
   white-space: normal !important;;
-  padding-bottom: 20px !important;
-  padding-top: 7px !important;
+
   min-height: 20px !important;
+}
+
+span[role=menuitem] > div > div {
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
 }
 
 span[role=menuitem] > div > div > svg {
@@ -131,9 +135,10 @@ label {
   }
 }
 
+
 .custom-select {
   @include media-breakpoint-up(lg) {
-    width: 100% !important;
+    width: 80% !important;
   }
 
   border: 2px solid $black;
@@ -152,26 +157,47 @@ label {
     }
   }
 }
-/*
-.custom-select > div {
-  @include media-breakpoint-up(md) {
+/* -------------- TODO #733-------------------- */
+/*.custom-select > div {
+  @include media-breakpoint-up(sm) {
     width: 80% !important;
     height: auto !important;
     white-space: normal;
     margin-top: 2% !important;
-
   }
-  bottom: 30% !important;
+  bottom: auto !important;
+  top: auto !important;
+
 }
 .custom-select > div > div {
+  @include media-breakpoint-up(sm) {
+
+  }
+  min-height: 20px;
 }
+
 .custom-select > div > div > button {
-   @include media-breakpoint-up(md) {
+   @include media-breakpoint-up(sm) {
     right: -25% !important;
     margin-top: 2% !important;
   }
   position: absolute;
+}
+
+.custom-select > .Select-control > span.Select-arrow-zone {
+
+}
+
+.related-fields > div > div > input {
+  top: -4px;
+}
+
+div.Select-placeholder {
+  @include media-breakpoint-up(md) {
+    width: 90%;
+  }
 } */
+/* -------------- TODO -------------------- */
 
 .section-heading {
   padding-top: 3rem;
